--- a/config/locales/fra/help/campaigns-index.txt
+++ b/config/locales/fra/help/campaigns-index.txt
@@ -2,24 +2,27 @@
 
 ===== Qu'est ce qu'une campagne ? =====
 
-La campagne est une période de temps délimitée au cours de laquelle une entreprise enregistre tous les faits techniques qui concourent à l'achevement de ses procédures et procéssus métiers.
+La campagne est une période au cours de laquelle une entreprise enregistre tous les faits techniques qui concourent à l'achevement de ses procédures et procéssus métiers.
 Cela correspond le plus souvent à l'année où sont récoltés les produits.
-Une campagne se caractérise par un code (indiquant en général l'année d'éxécution/récolte ).
+Une campagne se caractérise par un nom et une année de récolte (indiquant en général l'année d'éxécution/récolte ).
+
+Une [[>backend/sequences|numérotation automatique]] est disponible si besoin.
+
 Elle peut être active ou inactive (clôturée).
 
->>> Ex : Campagne 2013 / BLE = Recolte de Juillet 2013
->>> Je peux avoir un chevauchement entre une campagne de production et un exercice comptable
->>> et donc utiliser des intrants pour la campagne 2013 alors que je suis sur un exercice fiscal 2012.
+!!! Je peux avoir un chevauchement entre une campagne de production et un exercice comptable.
 
+>>> Ex : Campagne 2014 / BLE = Recolte en été 2014 - Semis en automne 2013
+
+!!! et donc utiliser des intrants (semences...) pour la campagne 2014 alors que je suis sur un exercice fiscal 2013 (01/01/2013 au 31/12/2013).
 !!! cf. Avances aux cultures
 
-Une procédure peut déclencher un bioprocessus qui s'éxécute sur plusieurs campagnes (cultures perennes, productions animales)
-
+!!! Une intervention peut créer un objet vivant qui vie sur plusieurs campagnes (cultures perennes, productions animales)
 !!! cf. Immobilisations
 
 ===== Quand est ce que les campagnes interviennent ? =====
 
 Elles interviennent :
 
-	* lors de la saisie des opérations et procédures
-	* lors de la [[>backend/journals#draft|saisie comptables]] si vous n'utilisez pas les opérations
+  * lors de la [[>backend/productions#new| création d'une production]]
+  * dans les tableaux de bord
