--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -106,8 +106,10 @@ jpn:
     backend/cells/elapsed_interventions_times_by_activities_cells: #?
     backend/cells/elevage_rss_cells: #?
     backend/cells/expense_chart_cells: #?
+    backend/cells/last_document_archives_cells: #?
     backend/cells/last_entities_cells: #?
     backend/cells/last_events_cells: #?
+    backend/cells/last_incidents_cells: #?
     backend/cells/last_incoming_deliveries_cells: #?
     backend/cells/last_interventions_cells: #?
     backend/cells/last_milk_result_cells: #?
@@ -749,10 +751,12 @@ jpn:
     # analytics: "Analytiques"
     # animal: "Animal"
     # animal_bar: "Animaux par lot"
+    # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
     # animal_identification: "Identification animale"
+    # animal_life_state: "Phase du bioprocessus de vie d’un animal"
     # animal_pie: "Animaux par lot"
     # animal_productions: "Productions animales"
     animal_tabbox:
@@ -816,6 +820,7 @@ jpn:
     # catalog: "Description pour catalogue"
     # category: "Catégorie"
     # category_name: "Catégorie"
+    # cells_concentration: "Dénombrement des cellules somatiques"
     # centralize: "Comptes comptables centralisateurs"
     # centralized_account: "Compte centralisateur %{name}"
     # change_price: "Changer le prix unitaire"
@@ -838,6 +843,7 @@ jpn:
     # close_financial_year: "Clôturer l’exercice"
     # close_journal: "Clôturer le journal"
     # closed: "Verrouillées"
+    # clostridial_spores_concentration: "Concentration en spores butyriques"
     # collected_taxes: "TVA déductibles / collectées"
     # column: "Donnée"
     # column_family: "Famille"
@@ -963,6 +969,7 @@ jpn:
     # export_backup: "Export d’un fichier de sauvegarde"
     # exportation: "Exportation"
     # extract: "Extraire"
+    # fat_matters_concentration: "Teneur en matières grasses"
     # fax: "Fax"
     # file_nature: "Type de fichier"
     # file_to_download: "Fichier à importer"
@@ -979,6 +986,7 @@ jpn:
     format_date:
       # iso: "(AAAA-MM-JJ)"
     # free_purchases: "Achats en franchise"
+    # freezing_point_temperature: "Point de solidification"
     # from: "À partir du"
     # full_name: "Client"
     # future_events: "Futurs événements"
@@ -990,6 +998,7 @@ jpn:
     # give_discount: "Octroyer une remise"
     # go: "Valider"
     # graph_statistics: "Statistiques graphiques"
+    # ground_appearance: "Aspect du sol"
     # group: "Groupe"
     # groups: "Groupes"
     # help: "Aide"
@@ -1000,9 +1009,11 @@ jpn:
       # other: "Temps d’utilisation total\_: %{count} heures"
     # iban: "Numéro de compte bancaire internationale (IBAN)"
     # identification: "Identification"
+    # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
     # import: "Importer"
     # import_backup: "Import de fichier de sauvegarde"
     # importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
+    # in_production: "En production"
     # incidents: "Incidents"
     # include_blank: "— Aucune organisation —"
     # income_statement: "Comptes de résultats"
@@ -1016,8 +1027,10 @@ jpn:
       # waiting: "À encaisser plus tard"
     # indicator: "Indicateur"
     # indicators: "Indicateurs"
+    # inel_index: "Index génétique INEL"
     # info: "Information\_: %{value}"
     # infos: "Information générales"
+    # inhibitors_presence: "Présence de résidus d’inhibiteurs"
     # input_evaluated_cost: "Coût intrants"
     # insert_actual_password: "Saisissez votre mot de passe actuel"
     # insert_password: "Saisissez votre nouveau mot de passe"
@@ -1030,6 +1043,7 @@ jpn:
     # invoiced_amount: "Montant facturé"
     # invoices_only: "Utiliser seulement les factures"
     # is: "Est"
+    # isu_index: "Index génétique ISU"
     # items: "Éléments"
     # journal: "Journal"
     # journal_detail: "Cloturé au %{closed_on}"
@@ -1071,6 +1085,7 @@ jpn:
       # title: "Catégories de tiers"
     # line: "Ligne n°%{index}\_:"
     # line_stock: "Lieu de stockage: %{building}, quantité disponible: %{virtual_q}"
+    # lipolysis: "Lipolyse"
     # list: "Liste"
     # listing_extract: "Éxécuter l’extraction"
     # listing_mail: "Envoyer un courriel"
@@ -1087,6 +1102,8 @@ jpn:
       # one: "%{count} courriel"
       # other: "%{count} courriels"
       # zero: "Aucun courriels"
+    # mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+    # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
     # management: "Gestion commerciale"
     # management_index: "Index de la gestion commerciale"
     # mandates_fields: "Vous devez saisir au moins une valeur dans l’un des champs"
@@ -1095,6 +1112,7 @@ jpn:
     # manual_period: "du %{start} au %{finish}"
     # map: "Carte"
     # measure_options: "Indicateur de type mesure"
+    # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
     # medicines: "Remèdes"
     # meeting: "Lieu(x) de rencontre"
@@ -1124,6 +1142,7 @@ jpn:
       # trade: "Achats/Ventes"
     # merge: "Fusionner"
     # meteo: "Météo"
+    # milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
     missing_help: "無意味なページ"
     # mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
     # mobile: "Portable"
@@ -1159,7 +1178,10 @@ jpn:
     # nb_years: "Nombre d’années dans l’historique"
     # need_building_to_create_production: "Vous devez créer un lieu de stockage pour pouvoir enregistrer vos productions"
     # need_entities_to_consult_mandates: "Vous devez créer des fiches clients/fournisseurs avant"
+    # net_surface_area: "Surface net"
     # net_vat_amount: "TVA nette due"
+    # net_volume: "Volume net"
+    # net_weight: "Poids net"
     # new: "Nouveau..."
     new_deposit:
       # one: "Effectuer une remise\_: %{mode} (%{count} encaissement disponible)"
@@ -1264,10 +1286,13 @@ jpn:
     # placeholder: "Espace réservé"
     # places: "Lieux"
     # planned_on: "Date prévisionnelle"
+    # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
     # plant_medicines: "Produits phytosanitaires"
     # plant_productions: "Productions végétales"
+    # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
     # play: "Éxécuter"
     # please_wait: "Merci de patienter..."
+    # population: "Population"
     # preferences: "Préférences"
     # pretax_amount: "Montant HT"
     previous: "前へ"
@@ -1306,6 +1331,7 @@ jpn:
       # all: "Tous"
       # inactive: "Inactifs"
     # profitability: "Rentabilité"
+    # protein_matters_concentration: "Teneur en matières protéïques"
     # purchase: "Achat"
     # purchase_items: "Lignes de l’achat"
     purchase_steps:
@@ -1337,6 +1363,7 @@ jpn:
     # reopen_journal: "Déclôturer le journal"
     # report: "Informations communes"
     # reported_balance: "Crédit à reporter"
+    # reproductor: "Reproducteur"
     # reservoir: "Réservoir"
     # reservoir_informations: "Informations sur le réservoir"
     # resource: "Consulter la pièce d’origine\_: %{resource} %{number}"
@@ -1425,11 +1452,14 @@ jpn:
     # send_test: "Envoyer un mail de test"
     # sequences_load: "Charger les séquences manquantes"
     # set_reconcilable_new_but_existing_third_accounts: "Rendre lettrables les nouveaux comptes tiers déjà existants"
+    # sex: "Sexe"
+    # shape: "Forme"
     # ship: "Prévue le"
     # show: "Afficher"
     # sign_out: "Se déconnecter"
     # simplified: "Régime du réel simplifié"
     # source: "Source de données"
+    # sowable: "Semable"
     # start: "Du"
     # state: "État"
     # stock_max: "Stock maximum"
@@ -1460,6 +1490,7 @@ jpn:
     # supports: "Supports de production"
     # synthesis: "Documents de synthèse"
     # target: "Cible"
+    # temperature: "Température"
     # theoric_quantity: "Quantité théorique"
     # third_informations: "Informations tierces"
     # time_zone: "Fuseau horaire"
@@ -1473,12 +1504,14 @@ jpn:
     # tools_list: "Liste d’outils"
     # total: "Total"
     # total_amount: "Montant total HT"
+    # total_bacteria_concentration: "Dénombrement des germes totaux"
     # total_in_currency: "Total (%{currency})"
     # total_invoiced_amount: "Total montant facturé"
     # total_paid_amount: "Montant total payé"
     # total_quantity: "Quantité totale"
     # total_unpaid_amount: "Montant total impayé"
     # totals: "Totaux (pièces validées et brouillard)"
+    # tp_index: "Index génétique Taux protéïque"
     # tracking: "Lot"
     # transfer: "Effectuer les transferts"
     # transport: "Transport"
@@ -1490,6 +1523,7 @@ jpn:
       # shipped: "Expédié"
       # waiting: "En attente"
     # treatment: "Traitement"
+    # true: "Vrai"
     # undelivered: "Reste à livrer"
     # undeposited: "Non remis en banque"
     # uninvoiced_amount: "Montant non facturé"
@@ -1515,7 +1549,9 @@ jpn:
     # update: "Modifier"
     # update_params: "Modifier la recherche"
     # upload: "Téléversement"
+    # urea_concentration: "Teneur moyenne en urée"
     # usage: "Utilisation"
+    # usage_duration: "Durée d'utilisation"
     # use_incoming_payment: "Rattacher l’encaissement %{payment}"
     # use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
     user_name: "ユーザー名"
