--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -48,7 +48,8 @@ arb:
         # content_maximal_quantity: "Quantité maximale supportée"
         # content_nature: "Type de Produit contenu"
         # variety: "Type"
-      campaign: #?
+      campaign:
+        # harvest_year: "Année de récolte"
       cash:  #?
         account: "كاتب الحسابات المشار اليه" #?
         account_id: "كاتب الحسابات المشار اليه" #?
@@ -92,6 +93,8 @@ arb:
         entity: "الملف" #?
         entity_id: "ملف" #?
         website: "موقع على الانترنت" #?
+      cultivable_land_parcel:
+        # area: "Superficie"
       currency:  #?
         cashes: "الخزينة" #?
         comment: "تعليق" #?
@@ -2166,17 +2169,46 @@ arb:
         # celsius: "celsius"
         # square_meter: "mètre carré"
         # unity: "unité"
-    product_indicator:
+    product_indicator: #?
+    product_indicator_datum:
+      indicator:
+        # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
+        # animal_life_state: "Phase du bioprocessus de vie d’un animal"
+        # cells_concentration: "Dénombrement des cellules somatiques"
+        # clostridial_spores_concentration: "Concentration en spores butyriques"
+        # fat_matters_concentration: "Teneur en matières grasses"
+        # freezing_point_temperature: "Point de solidification"
+        # ground_appearance: "Aspect du sol"
+        # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
+        # in_production: "En production"
+        # inel_index: "Index génétique INEL"
+        # inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        # isu_index: "Index génétique ISU"
+        # lipolysis: "Lipolyse"
+        # mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+        # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+        # milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+        # net_surface_area: "Surface net"
+        # net_volume: "Volume net"
+        # net_weight: "Poids net"
+        # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
+        # population: "Population"
+        # protein_matters_concentration: "Teneur en matières protéïques"
+        # shape: "Forme"
+        # sowable: "Semable"
+        # temperature: "Température"
+        # total_bacteria_concentration: "Dénombrement des germes totaux"
+        # tp_index: "Index génétique Taux protéïque"
+        # urea_concentration: "Teneur moyenne en urée"
+        # usage_duration: "Durée d'utilisation"
       nature:
         # boolean: "Case à cocher"
         # choice: "Liste de choix"
         # decimal: "Chiffre (décimal)"
         # measure: "Mesure"
         # string: "Texte"
-      usage:
-        # environment: "Environnement"
-        # life: "Biologique"
-        # production: "Production"
     product_localization:
       arrival_cause:
         # birth: "Naissance"
@@ -2227,7 +2259,9 @@ arb:
         # number: "Pas de périodicité"
         # year: "Année"
       usage:
+        # animals: "Numérotation des animaux"
         # assets: "Numérotation des immobilisations"
+        # campaigns: "Numérotation des campagnes de productions"
         # cash_transfers: "Numérotation des virements internes"
         # deposits: "Numérotation des remises en banque"
         # entities: "Numérotation des personnes"
@@ -2235,6 +2269,7 @@ arb:
         # incoming_payments: "Numérotation des encaissements"
         # outgoing_deliveries: "Numérotation des bons de livraisons"
         # outgoing_payments: "Numérotation des décaissements"
+        # plants: "Numérotation des cultures"
         # purchases: "Numérotation des achats"
         # sales: "Numérotation des ventes"
         # sales_invoices: "Numérotation des factures"
@@ -2824,7 +2859,9 @@ arb:
       no_product: "[لا لاي منتج]" #?
     sequence:
       default:
+        # animals: "ANI[year|4][number|4]"
         # assets: "I[number|7]"
+        # campaigns: "CAMP[number|4]"
         # cash_transfers: "VI[year|4][number|4]"
         # deposits: "B[year|4][number|4]"
         # entities: "[number|8]"
@@ -2832,6 +2869,7 @@ arb:
         # incoming_payments: "R[year|4][number|6]"
         # outgoing_deliveries: "BL[year|4][number|6]"
         # outgoing_payments: "D[year|4][number|4]"
+        # plants: "PLANT[year|4][number|4]"
         # products: "P[number|11]"
         # purchases: "A[year|4][month|2][number|6]"
         # sales: "V[year|4][month|2][number|6]"
