--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -117,10 +117,14 @@ fra:
       # show: "Show backend/cells/elapsed interventions times by activities cell"
     backend/cells/expense_chart_cells:
       # show: "Show backend/cells/expense chart cell"
+    backend/cells/last_document_archives_cells:
+      # show: "Show backend/cells/last document archives cell"
     backend/cells/last_entities_cells:
       # show: "Show backend/cells/last entities cell"
     backend/cells/last_events_cells:
       # show: "Show backend/cells/last events cell"
+    backend/cells/last_incidents_cells:
+      # show: "Show backend/cells/last incidents cell"
     backend/cells/last_incoming_deliveries_cells:
       # show: "Show backend/cells/last incoming deliveries cell"
     backend/cells/last_interventions_cells:
@@ -683,8 +687,10 @@ fra:
     # backend/cells/currents_stocks_by_product_nature_cells: "Backend/cells/currents stocks by product nature cells"
     # backend/cells/elapsed_interventions_times_by_activities_cells: "Backend/cells/elapsed interventions times by activities cells"
     # backend/cells/expense_chart_cells: "Backend/cells/expense chart cells"
+    # backend/cells/last_document_archives_cells: "Backend/cells/last document archives cells"
     # backend/cells/last_entities_cells: "Backend/cells/last entities cells"
     # backend/cells/last_events_cells: "Backend/cells/last events cells"
+    # backend/cells/last_incidents_cells: "Backend/cells/last incidents cells"
     # backend/cells/last_incoming_deliveries_cells: "Backend/cells/last incoming deliveries cells"
     # backend/cells/last_interventions_cells: "Backend/cells/last interventions cells"
     # backend/cells/last_milk_result_cells: "Backend/cells/last milk result cells"
@@ -814,40 +820,6 @@ fra:
         one: "%{count} erreur a empêché l’enregistrement (%{model})"
         other: "%{count} erreurs ont empêché l’enregistrement (%{model})"
   labels:
-    animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
-    animal_life_state: "Phase du bioprocessus de vie d’un animal"
-    cells_concentration: "Dénombrement des cellules somatiques"
-    clostridial_spores_concentration: "Concentration en spores butyriques"
-    fat_matters_concentration: "Teneur en matières grasses"
-    freezing_point_temperature: "Point de solidification"
-    ground_appearance: "Aspect du sol"
-    immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
-    in_production: "En production"
-    inel_index: "Index génétique INEL"
-    inhibitors_presence: "Présence de résidus d’inhibiteurs"
-    isu_index: "Index génétique ISU"
-    lipolysis: "Lipolyse"
-    mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
-    mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-    meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
-    milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
-    net_surface_area: "Surface net"
-    net_volume: "Volume net"
-    net_weight: "Poids net"
-    plant_life_state: "Phase du bioprocessus de vie d’un végétal"
-    plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
-    population: "Population"
-    protein_matters_concentration: "Teneur en matières protéïques"
-    sex: "Sexe"
-    reproductor: "Reproducteur"
-    true: "Vrai"
-    shape: "Forme"
-    sowable: "Semable"
-    temperature: "Température"
-    total_bacteria_concentration: "Dénombrement des germes totaux"
-    tp_index: "Index génétique Taux protéïque"
-    urea_concentration: "Teneur moyenne en urée"
-    usage_duration: "Durée d'utilisation"
     abilities: "Compétences"
     account_accruals: "Comptes de régularisation"
     account_attorney_to_create: "— Créer automatiquement un compte mandataire —"
@@ -926,10 +898,12 @@ fra:
     analytics: "Analytiques"
     animal: "Animal"
     animal_bar: "Animaux par lot"
+    animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
     animal_group_tabbox:
       animals: "Animaux du lot"
       cares: "Soins réalisés sur le lot"
     animal_identification: "Identification animale"
+    animal_life_state: "Phase du bioprocessus de vie d’un animal"
     animal_pie: "Animaux par lot"
     animal_productions: "Productions animales"
     animal_tabbox:
@@ -993,6 +967,7 @@ fra:
     catalog: "Description pour catalogue"
     category: "Catégorie"
     category_name: "Catégorie"
+    cells_concentration: "Dénombrement des cellules somatiques"
     centralize: "Comptes comptables centralisateurs"
     centralized_account: "Compte centralisateur %{name}"
     change_price: "Changer le prix unitaire"
@@ -1015,6 +990,7 @@ fra:
     close_financial_year: "Clôturer l’exercice"
     close_journal: "Clôturer le journal"
     closed: "Verrouillées"
+    clostridial_spores_concentration: "Concentration en spores butyriques"
     collected_taxes: "TVA déductibles / collectées"
     column: "Donnée"
     column_family: "Famille"
@@ -1139,6 +1115,7 @@ fra:
     export_backup: "Export d’un fichier de sauvegarde"
     exportation: "Exportation"
     extract: "Extraire"
+    fat_matters_concentration: "Teneur en matières grasses"
     fax: "Fax"
     file_nature: "Type de fichier"
     file_to_download: "Fichier à importer"
@@ -1155,6 +1132,7 @@ fra:
     format_date:
       iso: "(AAAA-MM-JJ)"
     free_purchases: "Achats en franchise"
+    freezing_point_temperature: "Point de solidification"
     from: "À partir du"
     full_name: "Client"
     future_events: "Futurs événements"
@@ -1166,6 +1144,7 @@ fra:
     give_discount: "Octroyer une remise"
     go: "Valider"
     graph_statistics: "Statistiques graphiques"
+    ground_appearance: "Aspect du sol"
     group: "Groupe"
     groups: "Groupes"
     help: "Aide"
@@ -1176,9 +1155,11 @@ fra:
       other: "Temps d’utilisation total\_: %{count} heures"
     iban: "Numéro de compte bancaire internationale (IBAN)"
     identification: "Identification"
+    immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
     import: "Importer"
     import_backup: "Import de fichier de sauvegarde"
     importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
+    in_production: "En production"
     incidents: "Incidents"
     include_blank: "— Aucune organisation —"
     income_statement: "Comptes de résultats"
@@ -1192,8 +1173,10 @@ fra:
       waiting: "À encaisser plus tard"
     indicator: "Indicateur"
     indicators: "Indicateurs"
+    inel_index: "Index génétique INEL"
     info: "Information\_: %{value}"
     infos: "Information générales"
+    inhibitors_presence: "Présence de résidus d’inhibiteurs"
     input_evaluated_cost: "Coût intrants"
     insert_actual_password: "Saisissez votre mot de passe actuel"
     insert_password: "Saisissez votre nouveau mot de passe"
@@ -1206,6 +1189,7 @@ fra:
     invoiced_amount: "Montant facturé"
     invoices_only: "Utiliser seulement les factures"
     is: "Est"
+    isu_index: "Index génétique ISU"
     items: "Éléments"
     journal: "Journal"
     journal_detail: "Cloturé au %{closed_on}"
@@ -1247,6 +1231,7 @@ fra:
       title: "Catégories de tiers"
     line: "Ligne n°%{index}\_:"
     line_stock: "Lieu de stockage: %{building}, quantité disponible: %{virtual_q}"
+    lipolysis: "Lipolyse"
     list: "Liste"
     listing_extract: "Éxécuter l’extraction"
     listing_mail: "Envoyer un courriel"
@@ -1263,6 +1248,8 @@ fra:
       one: "%{count} courriel"
       other: "%{count} courriels"
       zero: "Aucun courriels"
+    mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+    mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
     management: "Gestion commerciale"
     management_index: "Index de la gestion commerciale"
     mandates_fields: "Vous devez saisir au moins une valeur dans l’un des champs"
@@ -1271,6 +1258,7 @@ fra:
     manual_period: "du %{start} au %{finish}"
     map: "Carte"
     measure_options: "Indicateur de type mesure"
+    meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     medical_informations: "Informations médicales"
     medicines: "Remèdes"
     meeting: "Lieu(x) de rencontre"
@@ -1295,6 +1283,7 @@ fra:
       trade: "Achats/Ventes"
     merge: "Fusionner"
     meteo: "Météo"
+    milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
     missing_help: "Page inexistante"
     mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
     mobile: "Portable"
@@ -1330,7 +1319,10 @@ fra:
     nb_years: "Nombre d’années dans l’historique"
     need_building_to_create_production: "Vous devez créer un lieu de stockage pour pouvoir enregistrer vos productions"
     need_entities_to_consult_mandates: "Vous devez créer des fiches clients/fournisseurs avant"
+    net_surface_area: "Surface net"
     net_vat_amount: "TVA nette due"
+    net_volume: "Volume net"
+    net_weight: "Poids net"
     new: "Nouveau..."
     new_deposit:
       one: "Effectuer une remise\_: %{mode} (%{count} encaissement disponible)"
@@ -1435,10 +1427,13 @@ fra:
     placeholder: "Espace réservé"
     places: "Lieux"
     planned_on: "Date prévisionnelle"
+    plant_life_state: "Phase du bioprocessus de vie d’un végétal"
     plant_medicines: "Produits phytosanitaires"
     plant_productions: "Productions végétales"
+    plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
     play: "Éxécuter"
     please_wait: "Merci de patienter..."
+    population: "Population"
     preferences: "Préférences"
     pretax_amount: "Montant HT"
     previous: "Précédent"
@@ -1476,6 +1471,7 @@ fra:
       all: "Tous"
       inactive: "Inactifs"
     profitability: "Rentabilité"
+    protein_matters_concentration: "Teneur en matières protéïques"
     purchase: "Achat"
     purchase_items: "Lignes de l’achat"
     purchase_steps:
@@ -1507,6 +1503,7 @@ fra:
     reopen_journal: "Déclôturer le journal"
     report: "Informations communes"
     reported_balance: "Crédit à reporter"
+    reproductor: "Reproducteur"
     reservoir: "Réservoir"
     reservoir_informations: "Informations sur le réservoir"
     resource: "Consulter la pièce d’origine\_: %{resource} %{number}"
@@ -1595,11 +1592,14 @@ fra:
     send_test: "Envoyer un mail de test"
     sequences_load: "Charger les séquences manquantes"
     set_reconcilable_new_but_existing_third_accounts: "Rendre lettrables les nouveaux comptes tiers déjà existants"
+    sex: "Sexe"
+    shape: "Forme"
     ship: "Prévue le"
     show: "Afficher"
     sign_out: "Se déconnecter"
     simplified: "Régime du réel simplifié"
     source: "Source de données"
+    sowable: "Semable"
     start: "Du"
     state: "État"
     stock_max: "Stock maximum"
@@ -1630,6 +1630,7 @@ fra:
     supports: "Supports de production"
     synthesis: "Documents de synthèse"
     target: "Cible"
+    temperature: "Température"
     theoric_quantity: "Quantité théorique"
     third_informations: "Informations tierces"
     time_zone: "Fuseau horaire"
@@ -1643,12 +1644,14 @@ fra:
     tools_list: "Liste d’outils"
     total: "Total"
     total_amount: "Montant total HT"
+    total_bacteria_concentration: "Dénombrement des germes totaux"
     total_in_currency: "Total (%{currency})"
     total_invoiced_amount: "Total montant facturé"
     total_paid_amount: "Montant total payé"
     total_quantity: "Quantité totale"
     total_unpaid_amount: "Montant total impayé"
     totals: "Totaux (pièces validées et brouillard)"
+    tp_index: "Index génétique Taux protéïque"
     tracking: "Lot"
     transfer: "Effectuer les transferts"
     transport: "Transport"
@@ -1660,6 +1663,7 @@ fra:
       shipped: "Expédié"
       waiting: "En attente"
     treatment: "Traitement"
+    true: "Vrai"
     undelivered: "Reste à livrer"
     undeposited: "Non remis en banque"
     uninvoiced_amount: "Montant non facturé"
@@ -1685,7 +1689,9 @@ fra:
     update: "Modifier"
     update_params: "Modifier la recherche"
     upload: "Téléversement"
+    urea_concentration: "Teneur moyenne en urée"
     usage: "Utilisation"
+    usage_duration: "Durée d'utilisation"
     use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
     user_name: "Nom d’utilisateur"
