update interventions and productions view

--- a/config/locales/fra/help/productions-index.txt
+++ b/config/locales/fra/help/productions-index.txt
@@ -2,9 +2,7 @@
 
 ==== Qu'est ce qu'une production ? ====
 
-Un production est une intention de produire déclarée permettant de prévoir l'activité de l'exploitation en liant une activité,
-une campagne et un type de produit et optionnelement un support de production ( parcelle culturale ).
+Un production est une intention de produire déclarée permettant de prévoir l'activité de l'exploitation en liant une [[>backend/activities|activité]],
+une [[>backend/campaigns|campagne]], un type de produit et optionnelement un ou plusieurs supports de production ( [[>backend/cultivable_land_parcels|parcelle culturale]] par exemple ).
 
 !!! Il faut obligatoirement une production pour pouvoir effectuer des [[>backend/interventions|interventions]].
-
->>> Ex : Assolement des céréales pour la campagne 2013, Prévision de production de légumes...
