--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -92,8 +92,16 @@ jpn:
       # index: "Trésoreries"
       # new: "Enregistrer une nouvelle trésorerie"
       # show: "%{nature}\_: %{name}"
-    backend/catalog_prices: #?
-    backend/catalogs: #?
+    backend/catalog_prices:
+      # edit: "Modifier un prix"
+      # index: "Prix"
+      # new: "Nouveau prix"
+      # show: "Prix"
+    backend/catalogs:
+      # edit: "Modifier le catalogue de prix\_: %{name}"
+      # index: "Catalogue de prix"
+      # new: "Nouveau catalogue de prix"
+      # show: "Catalogue de prix\_: %{name}"
     backend/cells/bank_chart_cells: #?
     backend/cells/calendar_cells: #?
     backend/cells/collected_taxes_cells: #?
@@ -949,6 +957,7 @@ jpn:
     # entries: "Écritures"
     # entries_to_point: "Écritures à pointer"
     # equipment_evaluated_cost: "Coût équipements"
+    # equipments: "Equipements"
     error_no_file: "ページ(%{article})はありません。"
     # error_sale_already_paid: "La vente a déjà été payée en totalité"
     # errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
