--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -101,8 +101,16 @@ spa:
       index: "Tresorerias"
       new: "Registrar una nueva tresoreria"
       show: "%{nature_label} : %{name}"
-    backend/catalog_prices: #?
-    backend/catalogs: #?
+    backend/catalog_prices:
+      # edit: "Modifier un prix"
+      # index: "Prix"
+      # new: "Nouveau prix"
+      # show: "Prix"
+    backend/catalogs:
+      # edit: "Modifier le catalogue de prix\_: %{name}"
+      # index: "Catalogue de prix"
+      # new: "Nouveau catalogue de prix"
+      # show: "Catalogue de prix\_: %{name}"
     backend/cells/bank_chart_cells: #?
     backend/cells/calendar_cells: #?
     backend/cells/collected_taxes_cells: #?
@@ -1058,6 +1066,7 @@ spa:
     entries: "Escrituras"
     entries_to_point: "Escrituras a despuntar"
     # equipment_evaluated_cost: "Coût équipements"
+    # equipments: "Equipements"
     error_no_file: "Ninguna atyuda esta disponible para ese partido del software (%{article}). La ayuda ya no ha sido escribida. Se puede consultar el sitio en linea para mas informaciones."
     # error_sale_already_paid: "La vente a déjà été payée en totalité"
     # errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
