--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1758,6 +1758,10 @@ fra:
       one: "%{count} indicateur"
       other: "%{count} indicateurs"
       zero: "0 indicateur"
+    x_intervention_casts:
+      one: "%{count} intervention"
+      other: "%{count} interventions"
+      zero: "aucune intervention"
     x_items_remain_on_y:
       one: "%{count} élément restant."
       other: "%{count} éléments non visibles. Affinez votre recherche."
