--- a/README.rdoc
+++ b/README.rdoc
@@ -9,6 +9,9 @@ You can learn how to contribute in Ekylibre by following our official french gui
 https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre.
 
 == Installation
+
+Update with Ubuntu 13.10x64 / Ruby 2.0
+
 This a short explanation on installation steps for developers:
 * Before all, install all distribution dependencies:
     sudo apt-get install postgresql-9.1 postgresql-server-dev-9.1 libpq-dev libqtwebkit-dev libmagic-dev libxml2-dev libxslt1-dev libgdal1-dev libjson0-dev zlib1g-dev imagemagick graphicsmagick tesseract-ocr tesseract-ocr-fra tesseract-ocr-eng tesseract-ocr-spa pdftk openjdk-7-jdk libreoffice poppler-utils poppler-data ghostscript build-essential wget
@@ -42,11 +45,13 @@ This a short explanation on installation steps for developers:
       wget http://download.osgeo.org/postgis/source/postgis-2.1.0.tar.gz && tar xzvf postgis-2.1.0.tar.gz && cd postgis-2.1.0 && ./configure && make && sudo make install
 * Install Ruby 1.9.3 or later. If your distribution isn't up-to-date, see {RVM}[https://rvm.io] or {RBenv}[https://github.com/sstephenson/rbenv] to install the good version, else:
     sudo apt-get install ruby1.9.1 ruby1.9.1-dev
+  or
+  	wget ftp://ftp.ruby-lang.org/pub/ruby/2.0/ruby-2.0.0-p247.tar.gz && tar xzvf ruby-2.0.0-p247.tar.gz && cd ruby-2.0.0-p247 && ./configure && make && sudo make install
 * Configure a normal user for DB and an admin user for PostgreSQL which can add PostGIS extension and updates config/database.yml
 * Install bundler with rubygems:
     gem install bundler
 * Move to Ekylibre directory root and install gems with bundler:
-    JAVA_HOME=/usr/lib/jvm/java-7-openjdk bundle install
+    JAVA_HOME=/usr/lib/jvm/java-7-openjdk NOKOGIRI_USE_SYSTEM_LIBRARIES=1 bundle install
 * Create and migrate database:
     rake db:create db:migrate db:seed
 * Optionally, it's possible to load anonymized data of a real (french) farm:
