add a chart for milk_result (production_dashboard and production views)

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1174,6 +1174,7 @@ fra:
       waiting: "À encaisser plus tard"
     indicator: "Indicateur"
     indicators: "Indicateurs"
+    indicator_value: "Valeur de l'indicateur"
     inel_index: "Index génétique INEL"
     info: "Information\_: %{value}"
     infos: "Information générales"
