--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -727,6 +727,7 @@ spa:
         # land_parcel_management: "Conduite de la parcelle"
     document_natures:
       items:
+        # activity_margin: "Interventions par activité"
         # manure_management_plan: "Plan de fumure"
         # veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
