--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1266,6 +1266,7 @@ arb:
       # waiting: "À encaisser plus tard"
     index: "العودة الى دليل ادارة الاعمال" #?
     indicator: "لوحة التحكم"
+    # indicator_value: "Valeur de l'indicateur"
     # indicators: "Indicateurs"
     # inel_index: "Index génétique INEL"
     info: "معرفة المعلومات عن وسائل النقل"
@@ -1946,6 +1947,10 @@ arb:
       # one: "%{count} indicateur"
       # other: "%{count} indicateurs"
       # zero: "0 indicateur"
+    x_intervention_casts:
+      # one: "%{count} intervention"
+      # other: "%{count} interventions"
+      # zero: "aucune intervention"
     x_items_remain_on_y:
       # one: "%{count} élément restant."
       # other: "%{count} éléments non visibles. Affinez votre recherche."
