--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -732,6 +732,7 @@ jpn:
         # land_parcel_management: "Conduite de la parcelle"
     document_natures:
       items:
+        # activity_margin: "Interventions par activité"
         # manure_management_plan: "Plan de fumure"
         # veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
