--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1976,7 +1976,7 @@ fra:
     various_journal: "Journal des opérations diverses par défaut"
   unroll:
     backend/accounts: "{number}. {name}"
-    backend/activities: "{name} ({family}/{nature})"
+    backend/activities: "{name}"
     backend/analytic_repartitions: "{id}"
     backend/animals: "{name} - {work_number}"
     backend/campaigns: "{name}"
