--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,6 +1,12 @@
+ekylibre (0.4.3) stable; urgency=low
+
+  * Freezes Passenger version to 3
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Thu, 31 Oct 2013 21:48:06 +0200
+
 ekylibre (0.4.2) stable; urgency=low
 
-  * Freezes Passenger version to 3 
+  * Freezes Passenger version to 3
 
  -- Brice Texier <brice.texier@ekylibre.org>  Thu, 25 Jul 2013 21:48:06 +0200
 
