Adds missing columns for campaign fixtures

--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1994,7 +1994,7 @@ spa:
     # various_journal: "Journal des opérations diverses par défaut"
   unroll:
     # backend/accounts: "{number}. {name}"
-    # backend/activities: "{name} ({family}/{nature})"
+    # backend/activities: "{name}"
     backend/activity_repartitions: #?
     # backend/analytic_repartitions: "{id}"
     # backend/animals: "{name} - {work_number}"
