--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1008,6 +1008,7 @@ arb:
     active: "فعال"
     # activity: "Activité"
     activity_code: "APE/NAF رمز"
+    # actor: "Actor"
     actual_number: "الرقم الحالي"
     address: "العنوان"
     # addresses: "Adresses"
@@ -1399,6 +1400,7 @@ arb:
     # initial_container: "Initial container"
     # initial_number: "Numéro initial"
     # initial_owner: "Initial owner"
+    # initial_population: "Initial population"
     integer_value: "قيمة العدد الصحيح"
     # intervention: "Intervention"
     # intervention_casts: "Intervention casts"
