--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -454,6 +454,7 @@ spa:
     # active: "Actif"
     # activity: "Activité"
     # activity_code: "Code APE/NAF"
+    # actor: "Actor"
     # actual_number: "Numéro en cours"
     # address: "Adresse"
     # addresses: "Adresses"
@@ -728,6 +729,7 @@ spa:
     # initial_container: "Initial container"
     # initial_number: "Numéro initial"
     # initial_owner: "Initial owner"
+    # initial_population: "Initial population"
     # integer_value: "Valeur entière"
     # intervention: "Intervention"
     # intervention_casts: "Intervention casts"
