--- a/config/locales/fra/aggregators.yml
+++ b/config/locales/fra/aggregators.yml
@@ -2,5 +2,43 @@ fra:
   aggregators:
     parameters:
       campaigns: "Campagne"
-    sections:
+    legends:
       profits: "Produits d'exploitation (1)"
+      products_sales: "Ventes de marchandises"
+      productions_sales: "Production vendue (biens et services)"
+      net_revenue: "Montant net du chiffre d'affaires"
+      stock_production: "Production stockée"
+      asset_production: "Production immobilisée"
+      subsidies: "Subventions"
+      provisions_revenues: "Reprises sur provisions (et amortissements), transferts de charges"
+      other_products: "Autres produits"
+      exploitation_products_total: "Total des produits d'exploitation (I)"
+      losses: "Charges d'exploitation (2)"
+      products_purchases: "Achats de marchandises"
+      stocks_variation: "Variation de stocks"
+      raw_matters_purchases: "Achats de matières premières et autres approvisionnements"
+      raw_matters_stocks_variation: "Variation de stocks de matières premières et autres approvisionnements"
+      others_purchases: "Autres achats et charges externes"
+      taxes: "Impôts, taxes et versements assimilés"
+      wages: "Salaires et traitements"
+      social_charges: "Charges sociales"
+      depreciations_inputations_expenses: "Dotations aux amortissements et dépréciations"
+      others_expenses: "Autres charges"
+      exploitation_expenses_total: "Total des charges d'exploitation (II)"
+      exploitation_result: "1. RÉSULTAT D'EXPLOITATION (I-II)"
+      financial_products: "Produits financiers"
+      financial_products_total: "Total des produits financiers (V)"
+      financial_expenses: "Charges financières"
+      financial_expenses_total: "Total des charges financières (VI)"
+      financial_result: "2. RÉSULTAT FINANCIER (V-VI)"
+      current_result_before_taxes: "3. RÉSULTAT COURANT avant impôts (I-II+III-IV+V-VI)"
+      exceptional_products: "Produits exceptionnels"
+      exceptional_products_total: "Total des produits exceptionnels (VII)"
+      exceptional_expenses: "Charges exceptionnelles"
+      exceptional_expenses_total: "Total des charges exceptionnelles (VIII)"
+      exceptional_result: "4. RÉSULTAT EXCEPTIONNEL (VII-VIII)"
+      employee_involvement: "Participation des salariés aux résultats (IX)"
+      profits_taxes: "Impôts sur les bénéfices (X)"
+      products_total: "Total des produits (I+III+V+VII)"
+      expenses_total: "Total des charges (II+IV+VI+VIII+IX+X)"
+      profit_or_loss: "Bénéfice ou perte"
